fix spacing on navbar for home page

--- a/css/index.css
+++ b/css/index.css
@@ -183,7 +183,7 @@ html main {
 .main-nav .text {
   display: flex;
   justify-content: space-evenly;
-  width: 50%;
+  width: 100%;
 }
 @media (max-width: 800px) {
   .main-nav .text {
