--- a/less/navigation.less
+++ b/less/navigation.less
@@ -24,7 +24,7 @@
     .text {
         display: flex;
         justify-content: space-evenly;
-        width: 50%;
+        width: 100%;
 
         @media @tablet {
             width: 80%;
